omni/tests/goldens/types/unknown_type_10.err
tests/goldens/types/unknown_type_10.omni:1:13: error: unknown type "Mystery10"
  let value10:Mystery10 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_10.omni:1:1: error: cannot assign int to Mystery10
  let value10:Mystery10 = 1
  ^~~ hint: adjust the expression or type annotation
